--- a/code-clone/package.json
+++ b/code-clone/package.json
@@ -16,11 +16,17 @@
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
+    "@angular/localize": "^9.1.0",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "angularfire2": "^5.4.2",
+    "bootstrap": "^4.4.1",
     "firebase": "^7.9.3",
+    "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
