--- a/code-clone/package.json
+++ b/code-clone/package.json
@@ -29,6 +29,7 @@
     "firebase": "^7.9.3",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.5.0",
+    "ngx-monaco-editor": "^9.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
