--- a/code-clone/angular.json
+++ b/code-clone/angular.json
@@ -25,9 +25,11 @@
               { "glob": "**/*", "input": "node_modules/ngx-monaco-editor/assets/monaco", "output": "./assets/monaco/" }
             ],
             "styles": [
+              "src/styles.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "./node_modules/highlight.js/styles/androidstudio.css"
+
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
