--- a/code-clone/package.json
+++ b/code-clone/package.json
@@ -28,8 +28,10 @@
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.9.3",
+    "highlightjs-line-numbers.js": "^2.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.5.0",
+    "ngx-highlightjs": "^4.1.0-beta",
     "ngx-monaco-editor": "^9.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
