--- a/code-clone/firebase.json
+++ b/code-clone/firebase.json
@@ -3,7 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "dist",
+    "public": "dist/code-clone",
     "ignore": [
       "firebase.json",
       "**/.*",
