--- a/code-clone/angular.json
+++ b/code-clone/angular.json
@@ -22,14 +22,17 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "node_modules/ngx-monaco-editor/assets/monaco", "output": "./assets/monaco/" }
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-monaco-editor/assets/monaco",
+                "output": "./assets/monaco/"
+              }
             ],
             "styles": [
               "src/styles.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/highlight.js/styles/androidstudio.css"
-
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
@@ -130,5 +133,8 @@
       }
     }
   },
-  "defaultProject": "code-clone"
+  "defaultProject": "code-clone",
+  "cli": {
+    "analytics": false
+  }
 }
